@@ -9,6 +9,3 @@ class UserStatsViewSet(common.APIReadOnlyModelViewSet):
     serializer_class = serializers.UserStatsSerializer
     queryset = models.UserStats.objects.all()
     filter_fields = ('country_name', 'month')
-
-    def drf_ignore_filter(self, request, field):
-        return super().drf_ignore_filter(request, field)
