@@ -1,8 +1,14 @@
-# import crashlog.middleware
-# from django.apps import AppConfig
-# from django.core.signals import got_request_exception
-#
-#
-# class Config(AppConfig):
-#     def ready(self):
-#         got_request_exception.connect(crashlog.middleware.process_exception)
+from django.apps import AppConfig
+
+
+def invalidate_cache(sender, **kwargs):
+    for service in sender.linked_services:
+        service.invalidate_cache()
+
+
+class Config(AppConfig):
+    name = 'etools_datamart.apps.core'
+
+    def ready(self):
+        from etools_datamart.apps.etl.signals import data_refreshed
+        data_refreshed.connect(invalidate_cache)
