@@ -225,36 +225,3 @@ def load_user_report():
         created[country.name] += 1
 
     return created
-
-    # start_date = kwargs.get('start_date', None)
-    # if start_date:
-    #     start_date = datetime.strptime(start_date.pop(), '%Y-%m-%d')
-    # else:
-    #     start_date = date.today() + relativedelta(months=-1)
-    #
-    # countries = kwargs.get('countries', None)
-    # qs = Country.objects.exclude(schema_name__in=['public', 'uat', 'frg'])
-    # if countries:
-    #     qs = qs.filter(schema_name__in=countries.pop().split(','))
-    # fieldnames = ['Country', 'Total Users', 'Unicef Users', 'Last month Users', 'Last month Unicef Users']
-    # dict_writer = writer(fieldnames=fieldnames)
-    # dict_writer.writeheader()
-    #
-    # for country in qs:
-    #     dict_writer.writerow({
-    #         'Country': country,
-    #         'Total Users': get_user_model().objects.filter(profile__country=country).count(),
-    #         'Unicef Users': get_user_model().objects.filter(
-    #             profile__country=country,
-    #             email__endswith='@unicef.org'
-    #         ).count(),
-    #         'Last month Users': get_user_model().objects.filter(
-    #             profile__country=country,
-    #             last_login__gte=start_date
-    #         ).count(),
-    #         'Last month Unicef Users': get_user_model().objects.filter(
-    #             profile__country=country,
-    #             email__endswith='@unicef.org',
-    #             last_login__gte=start_date
-    #         ).count(),
-    #     })
