@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+import os
 from io import StringIO
 from unittest import mock
 
@@ -8,8 +9,22 @@ from django.core.management import call_command
 from django.db import OperationalError
 
 
+@pytest.fixture()
+def autocreate_users():
+    os.environ['AUTOCREATE_USERS'] = "user1,pwd|user2,pwd"
+    yield
+    del os.environ['AUTOCREATE_USERS']
+
+
+@pytest.fixture()
+def invalidate_cache():
+    os.environ['INVALIDATE_CACHE'] = "1"
+    yield
+    del os.environ['INVALIDATE_CACHE']
+
+
 @pytest.mark.django_db
-def test_init_setup_all(db, settings):
+def test_init_setup_all(db, settings, autocreate_users, invalidate_cache):
     settings.DEBUG = True
     call_command("init-setup", all=True, refresh=True, stdout=StringIO())
     ModelUser = get_user_model()
