@@ -24,8 +24,10 @@ def log_with_params(db):
 @pytest.fixture
 def reset_stats(db):
     from etools_datamart.apps.tracking.models import APIRequestLog, DailyCounter, UserCounter, MonthlyCounter, PathCounter
+    from etools_datamart.apps.tracking.utils import refresh_all_counters
     APIRequestLog.objects.truncate()
     DailyCounter.objects.truncate()
     MonthlyCounter.objects.truncate()
     PathCounter.objects.truncate()
     UserCounter.objects.truncate()
+    refresh_all_counters()
